GCP/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: porygon-api
spec:
  selector:
    app: porygon-api
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
